# Antool

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Eagle-Plugin/: index.html  manifest.json
Eagle-Plugin/js/: plugin.js
cli/: benchmark_single_ag_batch.py  tagging_request.py
resources/locales/: en-us.txt  zh-cn.txt
resources/models/v3-20211112-sgd-e28/: meta.json
src/apps/: __init__.py  builder.py  main.py
src/apps/api/: __init__.py
src/apps/ws/: __init__.py  image_evaluation.py
src/configs/: __init__.py  common.py  logger.py  performance.py  web_app.py
src/core/entities/: __init__.py
src/core/interfaces/: __init__.py  base_file_downloader.py  base_net_connection_adapter.py  base_repository.py  evaluation.py  file_provider.py  image_evaluator.py
src/core/service/: evaluation.py
src/infrastructure/: cancel.py  cli_tagging_request.py  logging.py  metrics.py
src/infrastructure/common/: config_provider.py
src/infrastructure/evaluations/: __init__.py  evaluation_pipeline.py  filter.py  image_encoder.py  model_loader.py  prediction.py  preprocess.py  processor.py  processor_cpu.py  scheduler.py
src/infrastructure/networks/: __init__.py  http_connection_adapter.py  http_file_downloader.py
src/infrastructure/repositories/: local_disk_file_provider.py  remote_file_provider.py
src/interactors/: __init__.py  evaluate_image.py
tests/core/entities/: test_entities.py
tests/infrastructure/evaluations/: test_evaluate_pipeline.py  test_scheduler.py
tests/interactors/: test_interactors.py
(+1 files in other folders)
