[project]
name = "antool"
version = "0.3.3"
description = ""
authors = [{ name = "Maker Linck", email = "makerlinck@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13,<=3.14"
dependencies = [
    "tensorflow (>=2.21.0,<3.0.0)",
    "scikit-image (>=0.26.0,<1.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "websocket-client (>=1.9.0,<2.0.0)",
    "websockets (>=16.0,<17.0)",
    "msgspec (>=0.20.0,<0.21.0)",
    "litestar (>=2.21.1,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
]

[project.scripts]
antool = "cli.tagging_request:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)", "pytest-asyncio (>=1.3.0,<2.0.0)"]

[tool.flake8]
max-line-length = 88
